Done with query selection

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <link rel="stylesheet" href="style.css">
+    <script src="sites.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Ryan's cool webpage</h1>
+        <h1>Josh's cool webpage</h1>
     </header>
 
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
-        <a href="#">Contact</a>
-		<a href="#">Login</a>
+        <a href="#" id="contact">Contact</a>
+		<a href="#" class="active">Login</a>
     </nav>
 
     <section>
@@ -24,7 +25,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Ryan's cool webpage. All rights reserved.</p>
+        <p>&copy; 2024 Josh's cool webpage. All rights reserved.</p>
     </footer>
 </body>
 </html>
